--- a/MarATHON/MarATHON.csproj
+++ b/MarATHON/MarATHON.csproj
@@ -62,6 +62,11 @@
     <Compile Include="formpay.Designer.cs">
       <DependentUpon>formpay.cs</DependentUpon>
     </Compile>
+    <Compile Include="g464_GolubtsovDataSet31.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>g464_GolubtsovDataSet31.xsd</DependentUpon>
+    </Compile>
     <Compile Include="info.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,6 +219,17 @@
     </None>
     <None Include="g464_GolubtsovDataSet2.xss">
       <DependentUpon>g464_GolubtsovDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="g464_GolubtsovDataSet31.xsc">
+      <DependentUpon>g464_GolubtsovDataSet31.xsd</DependentUpon>
+    </None>
+    <None Include="g464_GolubtsovDataSet31.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>g464_GolubtsovDataSet31.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="g464_GolubtsovDataSet31.xss">
+      <DependentUpon>g464_GolubtsovDataSet31.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
